# godel

./: README.md  godel.rosinstall
godel_msgs/msg/: RobotScanParameters.msg
godel_msgs/srv/: SurfaceDetection.srv
godel_path_execution/launch/: path_execution_service.launch
godel_path_execution/src/: path_execution_service.cpp
godel_process_execution/: package.xml
godel_process_execution/src/: blend_process_service.cpp
godel_process_planning/: CMakeLists.txt  package.xml
godel_process_planning/launch/: process_planning.launch
godel_process_planning/src/: common_utils.cpp  godel_process_planning.cpp
godel_robots/blending_end_effector/urdf/: blending_eff_macro.xacro
godel_robots/denso/denso_moveit_config_pkg/: .setup_assistant  package.xml
godel_robots/denso/godel_denso_support/: CMakeLists.txt  package.xml
godel_robots/denso/godel_denso_support/config/: robot_scan.yaml
godel_robots/denso/godel_denso_support/launch/: denso_blending.launch  denso_blending_test.launch
godel_robots/denso/godel_denso_support/models/tag_01/: model.sdf
godel_robots/denso/godel_denso_support/urdf/: denso_demo_description.urdf.xacro  table_denso.urdf.xacro
godel_robots/denso/godel_denso_support/worlds/: denso_robot.world
godel_robots/denso/vs087_ikfast_manipulator_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh  vs087_manipulator_moveit_ikfast_plugin_description.xml
godel_surface_detection/: CMakeLists.txt  package.xml
godel_surface_detection/launch/: godel_core.launch
godel_surface_detection/scripts/: surface_blending_service_docker
(+14 files in other folders)
