<?xml version="1.0"?>
<package format="2">
  <name>godel_denso_support</name>
  <version>0.0.0</version>
  <description>The godel_denso_support package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Dehpande</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>godel_surface_detection</build_depend>
  <build_export_depend>godel_surface_detection</build_export_depend>
  <exec_depend>godel_surface_detection</exec_depend>
  <depend>gazebo_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros                                                                 
        gazebo_model_path="${prefix}/models" />  
  </export>
</package>
